environments/prod/kubernetes/services/identity/auth-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    app: auth-api
    env: prod
  namespace: identity
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: auth-api
      labels:
        app: auth-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: auth-api
          image: steblynskyi-docker.jfrog.io/identity-auth-api:d0e0a73
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 350Mi
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: auth-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: auth-api
  namespace: identity
  labels:
    Domain: identity-auth-api.steblynskyi.com
spec:
  selector:
    app: auth-api
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
  type: NodePort
