environments/prod/kubernetes/services/identity/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  labels:
    app: identity-api
    env: prod
  namespace: identity
spec:
  replicas: 5
  selector:
    matchLabels:
      app: identity-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: identity-api
      labels:
        env: prod
        app: identity-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: identity-api
          image: steblynskyi-docker.jfrog.io/identity-api:56191f4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 25m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 600Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: identity-api
  namespace: identity
  labels:
    Domain: identity-api.steblynskyi.com
spec:
  selector:
    app: identity-api
    env: prod
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
