environments/prod/kubernetes/services/identity/identity-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-web
  labels:
    app: identity-web
    env: prod
  namespace: identity
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: identity-web
      labels:
        app: identity-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: identity-web
          image: steblynskyi-docker.jfrog.io/identity-web:b7f91e6
          imagePullPolicy: IfNotPresent
          args:
          - -base-path=/identity
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: identity-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: identity-web
  namespace: identity
  labels:
    Domain: identity-identity-web.steblynskyi.com
spec:
  selector:
    app: identity-web
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
