environments/prod/kubernetes/services/identity/role-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-api
  labels:
    app: role-api
    env: prod
  namespace: identity
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: role-api
      labels:
        app: role-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: role-api
          image: steblynskyi-docker.jfrog.io/identity-role-api:12de441
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            requests:
              cpu: 64m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 5000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: role-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: role-api
  namespace: identity
  labels:
    Domain: identity-role-api.steblynskyi.com
spec:
  selector:
    app: role-api
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
